--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^8.17.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
+    "html-webpack-plugin": "^5.5.0",
     "prettier": "2.7.1",
     "sass": "^1.52.3",
     "sass-loader": "^13.0.0",
