--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "start": "webpack serve",
+    "dev": "webpack serve",
     "watch": "webpack --watch",
     "build": "webpack",
     "clean": "rm -rf dist"
