--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "postcss-loader": "^7.0.0",
     "postcss-preset-env": "^7.7.1",
     "prettier": "2.7.1",
+    "purgecss-webpack-plugin": "^4.1.3",
     "sass": "^1.52.3",
     "sass-loader": "^13.0.0",
     "style-loader": "^3.3.1",
