--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-g{
+{
   "name": "webpacksetup",
   "version": "1.0.0",
   "description": "",
@@ -8,7 +8,8 @@ g{
     "dev": "webpack serve",
     "watch": "webpack --watch",
     "build": "webpack",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,7 @@ g{
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.3.1",
     "json5": "^2.2.1",
     "mini-css-extract-plugin": "^2.6.1",
     "postcss": "^8.4.14",
